// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/LONG.proto";
import "../ccsds_mal/STRING.proto";
import "./ProcessInfo.proto";


package connection.protobuf;

message ProcessIdentifier {
extensions 4 to 104;

  optional ccsds_mal.protobuf.LONG processId = 1;
  optional ccsds_mal.protobuf.STRING functionOId = 2;
  optional connection.protobuf.ProcessInfo processInfo = 3;
}
